maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:31: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:38: error: Unmatched closing brace '}' ignored here
}
^